# HGCal_QCTests

./: DACb_corr_new.py  LED_scan_testbeam_new.py  README.md  TB3_SlowControl_mat.py  common.py  daq-server.sh  evaluate_spsfit.py  i2c-server.sh  pedestal_run.py  refdacinv_correction.py  sampling_scan_int_conv_mat.py  sampling_scan_int_mat.py  sipm_injection_scan_conv_mat.py  sipm_mezz_v2.py  vrefinv_scan.py  vrefnoinv_scan.py
Scripts_to_be_checked/: CMakeLists.txt  DACb_correction.py  PrologixEthernetAdapter.py  adc_range_setting.py  agilent_ctrl.py  beam_run_May2023.py  calibration_test.py  check_min_charge_for_toa_settings.txt  common_dacb_scan.py  configure_rocs.py  dacb_scan.py  dacb_scan_analysis.py  delay_scan.py  dump_run.py  dump_run_analysis.py  full_test_nsh_hb.py  hb_prodtest.py  injection_scan_int_mat.py  injection_scan_withTPG.py  inputdac_scan.py  keithley2000_with_scanner_card.py  l1offsetscan_May2023.py  myinotifier.py  pedestal_scan.py  pedestal_scan_DACb.py  phase_scan.py  probeDC_run.py  requirements.txt  rocv3_prodtest.py  sampling_scan_TOA_mat.py  sipm_full_test.py  sipm_vreftoa_scurvescan_conv_mat.py  tdcthreshold_global_scurve.py  template_scan.py  test_gbtsca.py  testbeam_daq.py  toa_threshold_scan.py  toa_threshold_scan_sipm.py  toa_threshold_scan_sipm2.py  toa_threshold_scan_sipm_mat.py  (+15 more)
analysis/: CMakeLists.txt  README.md
analysis/etc/: env.sh  requirements.txt
analysis/level1/: aggregate_summary.py  injection_scan_analysis.py  pedestal_run_analysis.py  pedestal_scan_analysis.py  phase_scan_analysis.py  qualify_chip.py  summaryWriter.py
configs/: ConvGain_0_default.yaml  ConvGain_12_inv.yaml  ConvGain_12_inv_Dacb.yaml  roc_config_ConvGain12.yaml
etc/: env.sh  requirements.txt
level0/: vrefinv_scan_analysis.py  vrefnoinv_scan_analysis.py
setup/: daq-client.sh  firmware_load.sh  i2c-server.sh
